--- a/style.css
+++ b/style.css
@@ -82,15 +82,20 @@ body {
   color: rgb(82, 82, 82);
 }
 
-@media screen and (min-width: 600px) and (max-width: 850px) {
+@media screen and (min-width: 650px) and (max-width: 850px) {
   .slider-box {
     width: 60%;
   }
+  .slide-img {
+    height: 50%;
+    user-select: none;
+  }
 }
 
-@media screen and (max-width: 599px) {
+@media screen and (max-width: 649px) {
   .container {
     height: 100vh;
+    width: 100vw;
     overflow: hidden;
     padding: 2rem;
   }
